sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_loop.mlir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Op(
      name: "builtin.module",
      successors: [],
    )),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Var(
              id: "%0",
              index: None,
            ))),
            Operation(Op(
              name: "cf.br",
              successors: [
                BlockAddr("^bb0"),
              ],
            )),
            Edge(CF(Some(BlockAddr("^bb0")))),
            Operation(Op(
              name: "b",
              successors: [],
            )),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((1, 2, 0)),
            Some((0, 3, 0)),
          ],
        )),
        Edge(BoundVar(Var(
          id: "%0",
          index: None,
        ))),
        Edge(CF(Some(BlockAddr("^bb1")))),
        Edge(CF(Some(BlockAddr("^bb0")))),
        Thunk(Graph(
          nodes: [
            Operation(Op(
              name: "cf.br",
              successors: [
                BlockAddr("^bb1"),
              ],
            )),
            Edge(CF(Some(BlockAddr("^bb1")))),
            Operation(Op(
              name: "a",
              successors: [],
            )),
            Edge(BoundVar(Var(
              id: "%0",
              index: None,
            ))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((0, 1, 0)),
            Some((2, 3, 0)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((1, 0, 0)),
        Some((2, 0, 1)),
        Some((0, 3, 0)),
        Some((3, 4, 0)),
        Some((4, 2, 0)),
        Some((4, 1, 1)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 1, 0)),
  ],
)
