sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_mutual.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Lambda),
    Edge(Nil),
    Edge(BoundVar(VariableDef(
      var: Variable("y"),
      meta: None,
    ))),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("x"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("z"),
          meta: None,
        ))),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [],
    )),
    Edge(BoundVar(VariableDef(
      var: Variable("x"),
      meta: None,
    ))),
    Operation(Plus),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((4, 3, 0)),
    Some((3, 1, 0)),
    Some((2, 5, 0)),
    Some((5, 4, 0)),
  ],
)
