sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_mutual_bad.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Not),
    Edge(BoundVar(VariableDef(
      var: Variable("a"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("d"),
      meta: None,
    ))),
    Operation(Times),
    Edge(BoundVar(VariableDef(
      var: Variable("b"),
      meta: None,
    ))),
    Operation(Minus),
    Edge(BoundVar(VariableDef(
      var: Variable("c"),
      meta: None,
    ))),
    Operation(Plus),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((4, 3, 0)),
    Some((3, 1, 0)),
    Some((1, 5, 0)),
    Some((5, 6, 0)),
    Some((6, 7, 0)),
    Some((7, 4, 0)),
  ],
)
