sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_mutual_poset.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Plus),
    Edge(BoundVar(VariableDef(
      var: Variable("b"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("c"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("a"),
      meta: None,
    ))),
    Operation(Minus),
    Operation(Times),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 0, 1)),
    Some((0, 3, 0)),
    Some((1, 4, 0)),
    Some((3, 4, 1)),
    Some((4, 2, 0)),
    Some((3, 5, 0)),
    Some((5, 1, 0)),
  ],
)
