sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_nest.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Lambda),
    Edge(Nil),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(Variable("x"))),
        Operation(Lambda),
        Edge(Nil),
        Edge(Nil),
        Thunk(Graph(
          nodes: [
            Edge(BoundVar(Variable("x"))),
            Edge(BoundVar(Variable("y"))),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((2, 1, 0)),
        Some((1, 3, 0)),
        Some((0, 4, 0)),
        Some((4, 2, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((3, 1, 0)),
  ],
)
