sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_new_crash.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("x"))),
    Operation(Plus),
    Edge(BoundVar(VariableDef(
      var: Variable("d"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("f"),
      meta: None,
    ))),
    Operation(Plus),
    Edge(BoundVar(VariableDef(
      var: Variable("a"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("e"),
      meta: None,
    ))),
    Operation(Plus),
    Operation(Plus),
    Edge(BoundVar(VariableDef(
      var: Variable("b"),
      meta: None,
    ))),
    Edge(BoundVar(VariableDef(
      var: Variable("c"),
      meta: None,
    ))),
    Operation(Plus),
    Operation(Plus),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((1, 3, 0)),
    Some((2, 4, 0)),
    Some((5, 4, 1)),
    Some((4, 6, 0)),
    Some((6, 7, 0)),
    Some((7, 2, 0)),
    Some((9, 8, 0)),
    Some((0, 8, 1)),
    Some((8, 10, 0)),
    Some((3, 11, 0)),
    Some((11, 9, 0)),
    Some((10, 12, 0)),
    Some((3, 12, 1)),
    Some((12, 5, 0)),
  ],
)
