sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_swapping.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Lambda),
    Edge(Nil),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Edge(BoundVar(VariableDef(
          var: Variable("a"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("b"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("d"),
          meta: None,
        ))),
        Edge(BoundVar(VariableDef(
          var: Variable("c"),
          meta: None,
        ))),
        Operation(Plus),
        Edge(Nil),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((3, 4, 0)),
        Some((1, 4, 1)),
        Some((0, 4, 2)),
        Some((4, 5, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((0, 2, 0)),
    Some((3, 1, 0)),
  ],
)
