sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_thunk_copy.sd.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Edge(FreeVar(Variable("y"))),
    Operation(Lambda),
    Edge(Nil),
    Edge(BoundVar(VariableDef(
      var: Variable("x"),
      meta: None,
    ))),
    Thunk(Graph(
      nodes: [
        Edge(FreeVar(Variable("y"))),
        Operation(Plus),
        Edge(Nil),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((0, 1, 0)),
        Some((0, 1, 1)),
        Some((1, 2, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((2, 1, 0)),
    Some((1, 3, 0)),
    Some((0, 4, 0)),
    Some((4, 2, 0)),
  ],
)
